@@ -29,7 +29,9 @@
 #define LINKLOCAL_MASK       0xffff0000
 #define LINKLOCAL_BRDC		 0xa9feffff
 
-#define IN_LINKLOCAL(addr) ((ntohl (addr) & IN_CLASSB_NET) == LINKLOCAL_ADDR)
+#ifndef IN_LINKLOCAL
+# define IN_LINKLOCAL(addr) ((ntohl (addr) & IN_CLASSB_NET) == LINKLOCAL_ADDR)
+#endif
 
 int ipv4ll_get_address (interface_t *iface, dhcp_t *dhcp);
 
